--- a/CMCS/Views/UserAccount/UpdateUserProfile.cshtml
+++ b/CMCS/Views/UserAccount/UpdateUserProfile.cshtml
@@ -276,10 +276,7 @@
 
             // Check if the validation process succeeded.
             if (validation) {
-                document.getElementById("main-screen").style.position = "absolute";
-                document.getElementById("main-footer").style.position = "fixed";
-                document.getElementById("loading-screen").style.top = ((window.innerHeight / 2) - (window.innerHeight / 4)) + window.scrollY + "px";
-                document.getElementById("loading-screen").hidden = false;
+                showLoadingScreen();
 
                 // Create a new object.
                 let userData = new Object();
@@ -349,7 +346,7 @@
                     if (documentsRead == (uploadedQualificationDocuments.length + uploadedIdentityDocuments.length)) {
                         // Post data
                         POST_DATA2("/UserAccount/UpdateUserProfile", JSON.stringify(userData), [["ActionName", "UpdateAccount"]], function (status) {
-                            showLoadingScreen();
+                            hideLoadingScreen();
                             
                             // Check if the status is OK and the role is 'Lecturer'.
                             if (status == 1 && role == "Lecturer") {
